[package]
name = "rust_bin"
version = "0.1.0"
authors = ["nokaa <nokaa@cock.li>"]

[dependencies]
chomp = "0.2.4"

diesel = "0.5.0"
diesel_codegen = { git = "https://github.com/sgrif/diesel", default-features = false, features = ["nightly", "postgres"] }

dotenv = "^0.8.0"
dotenv_macros = "^0.8.0"

rand = "0.3"

rotor = { git = "https://github.com/tailhook/rotor", rev="08946ce" }
rotor-http = { git = "https://github.com/tailhook/rotor-http" }
